# crew-ai

./: README.md  report.md  srs_document.md
ai_srs/: README.md  pyproject.toml  run_srs.py  setup.py
ai_srs/src/ai_srs/: __init__.py  crew.py  main.py  srs_tools.py
ai_srs/src/ai_srs/config/: agents.yaml  tasks.yaml
ai_srs/src/ai_srs/templates/: srs_template.md
ai_srs/src/ai_srs/tools/: __init__.py
