[project]
name = "ai_srs"
version = "0.1.0"
description = "ai-srs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_srs = "ai_srs.main:run"
run_crew = "ai_srs.main:run"
train = "ai_srs.main:train"
replay = "ai_srs.main:replay"
test = "ai_srs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
